--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
   },
