--- a/API/app.yaml
+++ b/API/app.yaml
@@ -1,1 +1,6 @@
-runtime: nodejs14
+runtime: nodejs
+env: flex
+
+beta_settings:
+  # Enable Google Cloud Endpoints API management.
+  use_endpoints_api_management: true
