--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"start": "nodemon index.js"
+		"start-dev": "nodemon index.js",
+    "start": "node index.js"
 	},
 	"engines": {
 		"node": ">=12.0.0"
