--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,8 @@
 runtime: nodejs
 env: flex
 
+env_variables:
+  GCLOUD_STORAGE_BUCKET: dantion-api-tes
 endpoints_api_service:
   # The following values are to be replaced by information from the output of
   # 'gcloud endpoints services deploy openapi-appengine.yaml' command.
