--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"type": "module",
 	"scripts": {
 		"start-dev": "nodemon index.js",
-    "start": "node index.js"
+		"start": "node index.js"
 	},
 	"engines": {
 		"node": ">=12.0.0"
@@ -15,13 +15,16 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@google-cloud/storage": "^6.0.1",
 		"bcrypt": "^5.0.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-fileupload": "^1.4.0",
 		"fs": "^0.0.1-security",
 		"jsonwebtoken": "^8.5.1",
-		"uuid": "^8.3.2"
+		"swagger-ui-express": "^4.4.0",
+		"uuid": "^8.3.2",
+		"yamljs": "^0.3.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.16"
