--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@google-cloud/bigquery": "^6.0.0",
 		"@google-cloud/storage": "^6.0.1",
 		"bcrypt": "^5.0.1",
 		"dotenv": "^16.0.1",
